Fix code non-word-wrapping bug sitewide

--- a/Site/public/css/styles.css
+++ b/Site/public/css/styles.css
@@ -131,6 +131,7 @@ header nav li:hover {
 
 .code {
 	font-family: Courier New, Courier, monospace;
+  word-wrap:break-word;
 	font-size: 2em;
 }
 
